--- a/planta.html
+++ b/planta.html
@@ -185,7 +185,15 @@
         <h1>Tecnomatix Plant Simulation</h1>
         <hr>
         <h2>Plantas de Producción</h2>
-        <p>adsfadfnadlfkadlgafdgadfmgfaldgdfgfbsfbsfbsf</p>
+        <p>En el proceso de fabricación de bicicletas de bambú la elaboración del marco es el proceso
+          que se diferencia respecto a la fabricación de bicicletas convencionales. En particular,
+          para este tipo de proceso identificamos dos técnicas diferentes. La primera consiste en realizar
+          las uniones de los tubos mediante la implementación de fibras y resinas, la otra técnica consiste en implementar
+          elementos metálicos de unión llamados en inglés Lugs, los cuales son secciones de tubo 
+          cortadas y soldadas para unir los tubos de bambú del marco de la bicicleta, dichos tubos de bambú 
+          son ensamblados a los Lugs utilizando pegamentos industriales. Por lo tanto se simularon dieferentes
+          procesos de fabricación en los cuales las diferencias más grandes se evidencian en los métodos
+          de elaboración del marco.</p>
         <div class="container" data-aos="fade-up">
           <div class="row">
             <div class="col-lg-6 video-box">
@@ -224,43 +232,48 @@
         <hr>
         <h2>Flujo de material</h2>
         <p>A continuación, se muestran las estadísticas de las estaciones en las cuales se tiene un porcentaje de tiempo
-          de trabajo mayor por lo cual pueden estar produciendo cuellos de botella en el proceso de producción.</p>
+          de trabajo mayor en las plantas que utilizan el método de Lugs implementando una estación para más de un proceso
+          por lo cual se pueden estar produciendo cuellos de botella en el proceso de producción.</p>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/chart1.PNG" class="img-fluid" alt="">
-              <h4 class="title">GENERADOR DE OXÍGENO</h4>
-              <p class="description">Previo a la fabricación de la bicicleta se hace necesario la plantación del bambú,
-                este genera 30% más oxígeno que los árboles ayudadno a reducir el exceso de CO2 que existe en la
-                atmósfera.</p>
+              <h4 class="title">Estaciones de pulido</h4>
+              <p class="description">En estas estaciones se retira el material sobrante de los procesos de pulido y corte
+                de los tubos de aluminio.
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/chart2.PNG" class="img-fluid" alt="">
-              <h4 class="title">RESISTENTE Y LIGERA</h4>
-              <p class="description">El bambú es más fuerte que el acero en lo que respecta a la resistencia a la
-                tracción. El acero tiene una resistencia a la tracción de 23.000 libras por pulgada cuadrada, mientras
-                que el bambú supera al acero con un valor de 28.000 libras por pulgada. </p>
+              <h4 class="title">Tratamiento superficial</h4>
+              <p class="description">En estas estaciones sucesivas se realiza el acabado superficial de los Lugs de aluminio
+                que se utilizarán posteriormente en la unión de los tubos de bambú. </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/chart3.PNG" class="img-fluid" alt="">
-              <h4 class="title">RAPIDEZ EN CRECIMIENTO</h4>
-              <p class="description">En solo 3 años el bambú alcanza su madurez, otras maderas tardan entre 15 y 25
-                años, como el pino. Esto hace del bambú un recurso altamente renovable.</p>
+              <h4 class="title">Bocas de pescado</h4>
+              <p class="description">En esta única estacion de bocas de pescado se le realiza este proceso a todos los
+                tubos de aluminio utilizados para realizar los Lugs.
+              </p>
             </div>
           </div>
         </div>
         <hr>
         <h2>Comparación de producción</h2>
-        <p>dafabsdfkasdfasdfasdfasdfsadfads</p>
+        <p>En la Tabla que se expone a continuación se puede ver una comparación en la producción
+          de un mes de las diferentes plantas simuladas. Es importante resaltar que el campo
+          "Throughput per Day" hace referencia a un tiempo de 24 horas.</p>
         <img src="assets/img/PlantSimu/Tabla.PNG" class="img-fluid" alt="">
-        <p>dafabsdfkasdfasdfasdfasdfsadfads</p>
+        <p>En este caso particular podemos ver como la implementación de Lugs mejora en 3,5 veces
+        la producción de bicicletas, pero a la vez la disminución de las estaciones de trabajo
+        limita el correcto desempeño de la planta con el método más optimo de fabricación del marco.</p>
 
 
         <hr>
