--- a/team.html
+++ b/team.html
@@ -92,7 +92,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/Gabriel.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -102,8 +102,17 @@
               </div>
               <div class="member-info">
                 <h4>Gabriel Andrés Acevedo Forero</h4>
-                <span>Chief Executive Officer</span>
-                <p>Animi est delectus alias quam repellendus nihil nobis dolor. Est sapiente occaecati et dolore. Omnis aut ut nesciunt explicabo qui. Eius nam deleniti ut omnis repudiandae perferendis qui. Neque non quidem sit sed pariatur quia modi ea occaecati. Incidunt ea non est corporis in.</p>
+                <p>Mi participación dentro del desarrollo del proyecto ha sido dirigida
+                  principalmente a la organización del mismo, así como de la distribución
+                  del trabajo. He realizado laborares como la subdivisión de tareas y creación
+                  de listas de actividades, construcción del diagrama de desglose de trabajo.
+                  Igualmente he contribuido en diversas áreas del montaje de la línea de producción
+                  como en el mapa de flujo de valor y en la investigación para la propuesta del
+                  sistema MES. Durante el tiempo que llevamos desarrollando el proyecto he observado
+                  que la comunicación es lo más importante para lograr generar avances, ya sean avances
+                  individuales o grupales. Sin comunicación no es posible saber qué tareas faltan por
+                  completarse o en cuáles se ha avanzado, y eventualmente se podría caer en la situación
+                  de que dos personas estén trabajando en lo mismo con un planteamiento totalmente distinto.</p>
               </div>
             </div>
           </div>
@@ -111,18 +120,19 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/Alvaro.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/%C3%A1lvaro-chaves-ladino-074756138/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Álvaro Cháves Ladino</h4>
-                <span>Product Manager</span>
-                <p>Aspernatur iste esse aliquam enim et corporis. Molestiae voluptatem aut eligendi quis aut. Libero vel amet voluptatem eos rerum non doloremque. Dolores eum non.</p>
+                <p>Me dediqué al desarrollo de una propuesta económica completa,
+                  coherente y sostenible bajo las condiciones del proyecto y teniendo
+                  en cuenta los posibles escenarios en los que podría ejecutarse.
+                  Adicionalmente trabajo en la construcción de los gemelos digitales
+                  que se integrarán a los modelos ciberfísicos del proyecto aportando
+                  mis conocimientos en Robótica.</p>
               </div>
             </div>
           </div>
@@ -137,7 +147,6 @@
               </div>
               <div class="member-info">
                 <h4>Ángel Esteban Díaz Sarmiento</h4>
-                <span>CTO</span>
                 <p>Dentro de mis tareas asignadas por el equipo fue el diseño de la planta sin automatizar en Plant Simulation. A partir de discusiones en grupo acordamos especificaciones de cómo queríamos que fuera la planta sobre la cual vamos a trabajar para el proyecto y para esto ha sido necesario mantener constante comunicación entre los integrantes para llegar a acuerdos y estar en sintonía sobre el desarrollo del proyecto. Considero que precisamente la comunicación junto con el compromiso son un aspecto crítico a la hora de obtener buenos resultados, dado que la comunicación nos permite transmitir ideas, inconformidades o dudas respecto al desarrollo del proyecto. Por lo cual mejorar este aspecto será de gran ayuda para mejorar los aportes individuales y finalmente obtener resultados óptimos.</p>
               </div>
             </div>
@@ -146,17 +155,20 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/Sergio.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/sergio-esteban-quintero-benavides-594695208/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Sergio Esteban Quintero Benavides</h4>
-                <p>Sint qui cupiditate. Asperiores fugit impedit aspernatur et mollitia. Molestiae qui placeat labore assumenda id qui nesciunt quo reprehenderit. Rem dolores similique quis soluta culpa enim quia ratione ea.</p>
+                <p>Mis aportes en este proyecto se encaminaron en la Gestión de producción y automatización,
+                  en esta sección en particular fue vital el trabajo en equipo debido a todas las consideraciones que
+                  debiamos realizar con el fin de modelar un proceso lógico de fabricacion de bicicletas de bambú. Por otra parte,
+                  en esta misma sección realicé junto con otros compañeros el análisis de indicadores de producción y el proceso de
+                  pre automatización. Adicionalmente, aporté con algunos datos técnicos sobre las bicicletas que fueron utiles
+                  para determinar el procesos de fabricación de las mismas debido a mi afición por este deporte.
+                </p>
               </div>
             </div>
           </div>
