--- a/celda.html
+++ b/celda.html
@@ -89,7 +89,8 @@
       <div class="container">
         <div class="section-title">
           <h2>Diseño de celdas robotizadas.</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>En el siguiente diagrama se expone la hoja de ruta para el diseño de una
+            celda robotizada que pueda ser utilizada en una planta de producción.</p>
           <br/>
           <img src="assets/img/Celda/infografia.jpg" alt="...">
         </div>
