--- a/planta.html
+++ b/planta.html
@@ -278,59 +278,45 @@
 
         <hr>
         <h2>VSM</h2>
-        <p>dafabsdfkasdfasdfasdfasdfsadfads</p>
-        <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"width="100%" height="400"></iframe>
-        <p>dafabsdfkasdfasdfasdfasdfsadfads</p>
+        <p>El diagrama VSM es  permite visualizar todo el proceso, en donde se observa tanto el flujo de información como de materiales necesarios para que un producto, en este caso, tanto la Bicicleta Urbana como la Bicicleta Hibrida, desde los proveedores hasta la  llegada al cliente, adicionalmente permite observar las actividades que no agregan valor al proceso para posteriormente iniciar las actividades necesarias para eliminarlas.</p>
+        <iframe src="https://drive.google.com/file/d/1ZG1sUa5ajdDpbLxFMmN_A2cPZQhhhpRN/preview"width="100%" height="400"></iframe>
+        <iframe src="https://drive.google.com/file/d/1Zbfyy_qKClTHTztZXt7sROnu04yu1HJ8/preview"width="100%" height="400"></iframe>
+        <p>A continuación, se presentan los tiempos de producción de 3 bicicletas por día, tanto para la referencia de Bicicleta Urbana como Hibrida,Cabe destacar que se realizo una prueba a la planta durante 30 días para evaluar si estos tiempos se mantenían de forma apropiada. Adicionalmente los tiempos correspondientes a la producción de una bicicleta de cada referencia, donde se evidencia que fracción del tiempo permite adicionar valor, que fracción se emplea en transporte y en tiempos de espera.</p>
 
         <br/>
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-green">
-              <img src="assets/img/PlantSimu/chart1.PNG" class="img-fluid" alt="">
-              <h4 class="title">GENERADOR DE OXÍGENO</h4>
-              <p class="description">Previo a la fabricación de la bicicleta se hace necesario la plantación del bambú,
-                este genera 30% más oxígeno que los árboles ayudadno a reducir el exceso de CO2 que existe en la
-                atmósfera.</p>
+              <img src="assets/img/PlantSimu/Hibrida_time.PNG" class="img-fluid" alt="">
+              <h4 class="title">Tiempo de Producción 3 Bicicletas Diarias- Referencia Hibrida</h4>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-green">
-              <img src="assets/img/PlantSimu/chart2.PNG" class="img-fluid" alt="">
-              <h4 class="title">RESISTENTE Y LIGERA</h4>
-              <p class="description">El bambú es más fuerte que el acero en lo que respecta a la resistencia a la
-                tracción. El acero tiene una resistencia a la tracción de 23.000 libras por pulgada cuadrada, mientras
-                que el bambú supera al acero con un valor de 28.000 libras por pulgada. </p>
+              <img src="assets/img/PlantSimu/Hibrida_graph.PNG" class="img-fluid" alt="">
+              <h4 class="title">Tiempo referentes a produccion 1 Bicicleta- Referencia Hibrida</h4>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
-              <img src="assets/img/PlantSimu/chart3.PNG" class="img-fluid" alt="">
-              <h4 class="title">RAPIDEZ EN CRECIMIENTO</h4>
-              <p class="description">En solo 3 años el bambú alcanza su madurez, otras maderas tardan entre 15 y 25
-                años, como el pino. Esto hace del bambú un recurso altamente renovable.</p>
+              <img src="assets/img/PlantSimu/Urbana_time.PNG" class="img-fluid" alt="">
+              <h4 class="title">Tiempo de Producción 3 Bicicletas Diarias- Referencia Urbana</h4>
+            </div>
+          </div>
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box icon-box-green">
+              <img src="assets/img/PlantSimu/Urbana_graph.PNG" class="img-fluid" alt="">
+              <h4 class="title">Tiempo referentes a produccion 1 Bicicleta- Referencia Urbana</h4>
             </div>
           </div>
         </div>
-
-        <br/>
-        <div class="container" data-aos="fade-up">
-          <div class="row">
-            <div class="col-lg-6 video-box">
-              <img src="assets/img/PlantSimu/chart3.PNG" class="img-fluid" alt="">
-              <p>Planta123.</p>
-            </div>
-            <div class="col-lg-6 video-box">
-              <p>Planta123.</p>
-            </div>
-          </div>
-        </div>
-        <hr>
-        <h2>MES</h2>
-        <p>dafabsdfkasdfasdfasdfasdfsadfads</p>
       </div>
-
+      <hr>
+      <h2>MES</h2>
+      <p>Se eligió Odoo como herramienta computacional para la implementación del sistema MES principalmente por su flexibilidad. En lugar de adquirir un paquete completo, Odoo nos permite elegir los módulos que vamos a implementar para mejorar nuestro sistema de gestión y por aparte cobra licencias por su uso, de acuerdo al número de trabajadores e independientemente de su rango en la empresa. Esta modalidad de servicio trae como beneficios una reducción de costos y evitar la adquisición de herramientas que no se utilizarán.</p>
+      <img src="assets/img/PlantSimu/herramienta.jpeg" class="img-fluid" alt="">
       </section>
 
   </main><!-- End #main -->
