Update Taller1 Celda Robotizada

--- a/celda.html
+++ b/celda.html
@@ -61,6 +61,7 @@
             </ul>
           </li>
           <li><a href="team.html">Integrantes</a></li>
+          <li><a href="Profesores.html">Profesores</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -75,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Celda de manufactura Robotizadas</h2>
+          <h2>Celda de Manufactura Robotizadas</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Celda de manufactura Robotizadas</li>
+            <li>Celda de Manufactura Robotizadas</li>
           </ol>
         </div>
 
@@ -88,14 +89,36 @@
     <section class="pricing section-bg" data-aos="fade-up">
       <div class="container">
         <div class="section-title">
-          <h2>Diseño de celdas robotizadas.</h2>
+          <h2>Diseño de celdas robotizadas</h2>
           <p>En el siguiente diagrama se expone la hoja de ruta para el diseño de una
             celda robotizada que pueda ser utilizada en una planta de producción.</p>
           <br/>
-          <img src="assets/img/Celda/infografia.jpg" alt="...">
+          <div style="width: 100%;"><div style="position: relative; padding-bottom: 250.00%; padding-top: 0; height: 0;"><iframe frameborder="0" width="800" height="2000" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genial.ly/608f4fcfb84a0a0d4f50cdec" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
         </div>
 
       </div>
+    </section>
+
+    <section class="service-details">
+      <div class="container">
+
+        <div class="row">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://drive.google.com/drive/folders/1n1nn4cNDw_x2YA5tcGawngmm6LThYZ6Z?usp=sharing">Entregables</a></h5>
+                <p class="card-text">Dando clic en entregables podrá encontrar los documentos correspondientes al Taller 1 del módulo Celdas de Manufactura Robotizadas.</p>
+              </div>
+            </div>
+          </div>
+          <br> 
+          <div class="row">
+            <div class="card">
+              <div class="card-body" style="text-align:center;">
+                <h5 class="card-title">Video Simulación</a></h5>
+                <video src="assets/img/Celda/video.mp4" width=720  height=480 controls poster="assets/img/Celda/Capture2.png">
+              </div>
+            </div>
+          </div>
     </section>
 
   </main><!-- End #main -->
