--- a/indu4.0.html
+++ b/indu4.0.html
@@ -62,6 +62,7 @@
             </ul>
           </li>
           <li><a href="team.html">Integrantes</a></li>
+          <li><a href="Profesores.html">Profesores</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
