--- a/celda.html
+++ b/celda.html
@@ -115,7 +115,7 @@
             <div class="card">
               <div class="card-body" style="text-align:center;">
                 <h5 class="card-title">Video Simulación</a></h5>
-                <video src="assets/img/Celda/video.mp4" width=720  height=480 controls poster="assets/img/Celda/Capture1.png">
+                <iframe src="https://drive.google.com/file/d/1D1eiBpTGKfKr2onPQRBWTBoD9PBin1js/preview" width="640" height="480"></iframe>
               </div>
             </div>
           </div>
