--- a/indu4.0.html
+++ b/indu4.0.html
@@ -99,7 +99,7 @@
               <li>Respecto al nivel de planeación o MES (Manufacturing Execution System) se hará uso del software Tecnomatix-Plant Simulation, el cual permite la planificación y toma de decisiones respecto a la planta.</li>
             </ol>
           <p>Para el manejo del sistema de comunicación, se instalaran lo diferentes software en los diferentes equipos
-            de los estudiantes del equipo de trabajo:</p>
+            de los estudiantes del equipo de trabajo, donde cada computador se comunicara por medio de Igntion Gateway a Google Cloud:</p>
           <ul>
             <li>RobotStudio: Angel Diaz y Gabriel Acevedo</li>
             <li>Studio5000: Felipe Romero y Sergio Quintero.</li>
