--- a/planeacion.html
+++ b/planeacion.html
@@ -115,7 +115,16 @@
         height="1000px"></iframe>
     </div>
 
+    <div class="container" data-aos="fade-up">
+      <div class="row justify-content-md-center">
+      <div class="section-title">
+        <h2>EDT</h2>
+      </div>
+      <iframe src="https://drive.google.com/file/d/1DyJWmVDkDT4ywQFkkzmZxLDcbfg1EK0p/preview" width="640" height="480"></iframe>
+    </div>
+  </div>
 
+    
 
   </main>
 
