--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>APM Bicicletas de bambú </title>
+  <title>APM-Bicibu</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -37,7 +37,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Proyecto Final APM 2021-1</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>  <img src="assets/img/Logo.png" > Bicibu APM 2021-1</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -74,8 +74,9 @@
       <!-- Slide 1 -->
       <div class="carousel-item active" >
         <div class="carousel-container" data-aos="fade-up">
-          <h2 >Proyecto Final APM 2021-1</h2>
-          <p >Se busca la resolución de un problema real de automatización aplicado a un proceso de manufactura. El desarrollo de este proyecto se apoya en los contenidos temáticos que abarca el curso buscando su integración y aplicación en la resolución de un problema transversal de automatización en producción. Para la versión 2021-1 el proceso definido es la fabricación de bicicletas.</p>
+          
+          <h2 >BICIBU APM 2021-1  </h2>
+          <p > Se busca la resolución de un problema real de automatización aplicado a un proceso de manufactura. El desarrollo de este proyecto se apoya en los contenidos temáticos que abarca el curso buscando su integración y aplicación en la resolución de un problema transversal de automatización en producción. Para la versión 2021-1 el proceso definido es la fabricación de bicicletas.</p>
         </div>
       </div>
 
