--- a/digitalf.html
+++ b/digitalf.html
@@ -39,11 +39,11 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Proyecto Final APM 2021-1</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>  <img src="assets/img/Logo.png" > Bicibu APM 2021-1</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
-
+      
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active " href="index.html">Inicio</a></li>
