--- a/planta.html
+++ b/planta.html
@@ -37,9 +37,8 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center ">
     <div class="container d-flex justify-content-between align-items-center">
-
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Proyecto Final APM 2021-1</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>  <img src="assets/img/Logo.png" > Bicibu APM 2021-1</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
