--- a/team.html
+++ b/team.html
@@ -35,9 +35,9 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center ">
     <div class="container d-flex justify-content-between align-items-center">
-
+      
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Proyecto Final APM 2021-1</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>  <img src="assets/img/Logo.png" > Bicibu APM 2021-1</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -95,9 +95,6 @@
               <div class="member-img">
                 <img src="assets/img/team/Gabriel.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
