Update general pagina web

--- a/indu4.0.html
+++ b/indu4.0.html
@@ -47,8 +47,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active " href="index.html">Inicio</a></li>
-          <li class="dropdown"><a href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a href="index.html">Inicio</a></li>
+          <li class="dropdown"><a class="active"  href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="planeacion.html">Gestión de Proyecto</a></li>
               <li><a href="planta.html">Gestión de Producción y Automatización</a></li>
@@ -116,6 +116,16 @@
         <div class="row">
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
+              <div class="content" data-aos="fade-up" date-aos-delay="200">
+                <div class="images">
+                  <img src="assets/img/Ind4.0/I_page-0013.jpg">
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="card">
               <div class="images">
                 <img class="1" src="assets/img/Ind4.0/I_page-0002.jpg">
                 <img class="1" src="assets/img/Ind4.0/I_page-0003.jpg">
@@ -133,22 +143,7 @@
 
             </div>
           </div>
-          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
-            <div class="card">
-              <div class="content" data-aos="fade-up" date-aos-delay="200">
-                <div class="images">
-                  <img class="2" src="assets/img/Ind4.0/I_page-0014.jpg">
-                  <img class="2" src="assets/img/Ind4.0/I_page-0015.jpg">
-                  <img class="2" src="assets/img/Ind4.0/I_page-0016.jpg">
-                  <img class="2" src="assets/img/Ind4.0/I_page-0017.jpg">
-                  <img class="2" src="assets/img/Ind4.0/I_page-0018.jpg">
-                  <img class="2" src="assets/img/Ind4.0/I_page-0019.jpg">
-                  <img class="2" src="assets/img/Ind4.0/I_page-0020.jpg">
-                </div>
-              </div>
-            </div>
 
-          </div>
         </div>
 
 
@@ -164,6 +159,40 @@
 
       </div>
     </section>
+
+    <section class="service-details" data-aos="fade-up" date-aos-delay="200">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="card">
+              <img src="assets/img/Ind4.0/I_page-0020.jpg">
+            </div>
+
+
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+
+            <div class="card">
+              <div class="content" data-aos="fade-up" date-aos-delay="200">
+                <div class="images">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0014.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0015.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0016.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0017.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0018.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0019.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0020.jpg">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+    </section>
+
 
 
     </section>
