--- a/team.html
+++ b/team.html
@@ -44,7 +44,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active " href="index.html">Inicio</a></li>
+          <li><a  href="index.html">Inicio</a></li>
           <li class="dropdown"><a href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="planeacion.html">Gestión de Proyecto</a></li>
@@ -58,7 +58,7 @@
               <li><a href="economica.html">Evaluación económica del Proyecto</a></li>
             </ul>
           </li>
-          <li><a href="team.html">Integrantes</a></li>
+          <li><a class="active " href="team.html">Integrantes</a></li>
           <li><a href="Profesores.html">Profesores</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -221,4 +221,4 @@
 
 </body>
 
-</html>>
+</html>
