--- a/Profesores.html
+++ b/Profesores.html
@@ -44,7 +44,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active " href="index.html">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li class="dropdown"><a href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="planeacion.html">Gestión de Proyecto</a></li>
@@ -59,7 +59,7 @@
             </ul>
           </li>
           <li><a href="team.html">Integrantes</a></li>
-          <li><a href="Profesores.html">Profesores</a></li>
+          <li><a class="active " href="Profesores.html">Profesores</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -228,4 +228,4 @@
 
 </body>
 
-</html>>
+</html>
