--- a/actuadores.html
+++ b/actuadores.html
@@ -46,8 +46,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active " href="index.html">Inicio</a></li>
-          <li class="dropdown"><a href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a href="index.html">Inicio</a></li>
+          <li class="dropdown"><a class="active" href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="planeacion.html">Gestión de Proyecto</a></li>
               <li><a href="planta.html">Gestión de Producción y Automatización</a></li>
