--- a/Profesores.html
+++ b/Profesores.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Proceso de aprendizaje</title>
+  <title>Asignatura</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -59,7 +59,7 @@
             </ul>
           </li>
           <li><a href="team.html">Integrantes</a></li>
-          <li><a class="active " href="Profesores.html">Profesores</a></li>
+          <li><a class="active " href="Profesores.html">Asignatura</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -74,10 +74,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Profesores</h2>
+          <h2>Asignatura</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Profesores</li>
+            <li>Asignatura</li>
           </ol>
         </div>
 
@@ -85,8 +85,22 @@
     </section>
 
     <!-- ======= Team Section =======--> 
+    <br>
+    <div class="container" data-aos="fade-up">
+      <div class="section-title">
+        <h2>Automatización de Procesos de Manufactura. </h2>
+        <p>Automatización de Procesos de Manufactura es una asignatura de tipología disciplinar obligatoria de 3 créditos ofertada por la facultad de ingeniería de la Universidad Nacional de Colombia sede Bogotá para el programa de Ingeniería Mecatrónica. Esta materia busca reunir las diferentes habilidades adquiridas a lo largo de la carrera para desarrollar un proyecto integrador en el que se busca la automatización de una planta de fabricación de bicicletas, para la cual es necesario adquirir competencias en: Gestión de producción, Automatización e Industria, Planeación de proyectos y Evaluación económica, Celdas robotizadas, Digital Factory, Control con PLCs, Actuadores en automatización y SCADA</p>
+      </div>
+    </div>
+
+    <div class="container" data-aos="fade-up">
+
+    </div>
     <section class="team" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
       <div class="container">
+        <div class="section-title">
+          <h2>Profesores</h2>
+        </div>
         <div  class="row justify-content-md-center">
           
 
@@ -205,14 +219,15 @@
   <div class="container">
     <div class="credits">
       Repositorio de Trabajo en Github (Enlace)
-      <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a>
+      <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a> &nbsp  &nbsp    &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp&nbsp  &nbsp    &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp
+      <img src="assets/img/Escudo1.png">  
+      <img src="assets/img/Escudo2.png"> 
     </div>
   </div>
 </footer>
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
     class="bi bi-arrow-up-short"></i></a>
-
 <!-- Vendor JS Files -->
 <script src="assets/vendor/aos/aos.js"></script>
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
