--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </ul>
           </li>
           <li><a href="team.html">Integrantes</a></li>
-          <li><a href="Profesores.html">Profesores</a></li>
+          <li><a href="Profesores.html">Asignatura</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -180,7 +180,9 @@
   <div class="container">
     <div class="credits">
       Repositorio de Trabajo en Github (Enlace)
-      <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a>
+      <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a> &nbsp  &nbsp    &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp&nbsp  &nbsp    &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp
+      <img src="assets/img/Escudo1.png">  
+      <img src="assets/img/Escudo2.png"> 
     </div>
   </div>
 </footer>
