--- a/digitalf.html
+++ b/digitalf.html
@@ -61,7 +61,7 @@
             </ul>
           </li>
           <li><a href="team.html">Integrantes</a></li>
-          <li><a href="Profesores.html">Profesores</a></li>
+          <li><a href="Profesores.html">Asignatura</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -219,11 +219,13 @@
     <div class="container">
       <div class="credits">
         Repositorio de Trabajo en Github (Enlace)
-        <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a> &nbsp  &nbsp    &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp&nbsp  &nbsp    &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp
+        <img src="assets/img/Escudo1.png">  
+        <img src="assets/img/Escudo2.png"> 
       </div>
     </div>
   </footer>
-
+  
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
