--- a/team.html
+++ b/team.html
@@ -59,7 +59,7 @@
             </ul>
           </li>
           <li><a class="active " href="team.html">Integrantes</a></li>
-          <li><a href="Profesores.html">Profesores</a></li>
+          <li><a href="Profesores.html">Asignatura</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -90,7 +90,7 @@
         <div  class="row justify-content-md-center">
           
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/Gabriel.jpeg" class="img-fluid" alt="">
@@ -115,27 +115,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/Alvaro.jpeg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="https://www.linkedin.com/in/%C3%A1lvaro-chaves-ladino-074756138/"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Álvaro Cháves Ladino</h4>
-                <p>Me dediqué al desarrollo de una propuesta económica completa,
-                  coherente y sostenible bajo las condiciones del proyecto y teniendo
-                  en cuenta los posibles escenarios en los que podría ejecutarse.
-                  Adicionalmente trabajo en la construcción de los gemelos digitales
-                  que se integrarán a los modelos ciberfísicos del proyecto aportando
-                  mis conocimientos en Robótica.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/Angel.jpg" class="img-fluid" alt="">
@@ -150,7 +130,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/Sergio.jpg" class="img-fluid" alt="">
@@ -171,7 +151,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/Felipe.jpg" class="img-fluid" alt="">
@@ -198,7 +178,9 @@
   <div class="container">
     <div class="credits">
       Repositorio de Trabajo en Github (Enlace)
-      <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a>
+      <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a> &nbsp  &nbsp    &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp&nbsp  &nbsp    &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp
+      <img src="assets/img/Escudo1.png">  
+      <img src="assets/img/Escudo2.png"> 
     </div>
   </div>
 </footer>
