--- a/indu4.0.html
+++ b/indu4.0.html
@@ -101,9 +101,9 @@
           <p>Para el manejo del sistema de comunicación, se instalaran lo diferentes software en los diferentes equipos
             de los estudiantes del equipo de trabajo, donde cada computador se comunicara por medio de Igntion Gateway a Google Cloud:</p>
           <ul>
-            <li>RobotStudio: Angel Diaz y Gabriel Acevedo</li>
-            <li>Studio5000: Felipe Romero y Sergio Quintero.</li>
-            <li>Siemens NX: Álvaro Chaves .</li>
+            <li>RobotStudio: Felipe Romero</li>
+            <li>Studio5000:  Angel Diaz</li>
+            <li>Siemens NX:  Gabriel Acevedo y Sergio Quintero.</li>
           </ul>
           <br />
         </div>
