--- a/digitalf.html
+++ b/digitalf.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>TeC</title>
+  <title>Digital Factory</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,11 +43,11 @@
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
-      
+
       <nav id="navbar" class="navbar">
         <ul>
           <li><a  href="index.html">Inicio</a></li>
-          <li class="dropdown"><a class="active" href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a class="active"  href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="planeacion.html">Gestión de Proyecto</a></li>
               <li><a href="planta.html">Gestión de Producción y Automatización</a></li>
@@ -69,147 +69,86 @@
     </div>
   </header><!-- End Header -->
 
-  <!--<main id="main">
+  <main id="main">
 
-    <!-- ======= Our Team Section =======
+    <!-- ======= Our Services Section =======-->
     <section class="breadcrumbs">
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Our Team</h2>
+          <h2>Digital Factory</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Our Team</li>
+            <li>Digital Factory</li>
           </ol>
         </div>
 
       </div>
     </section>
-
-    <!-- ======= Team Section ======= 
-    <section class="team" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+    <div class="container" data-aos="fade-up">
+      <div class="section-title">
+        <h2>Digital Factory</h2>
+        <p>Utilizando el comisionamiento virtual, se realiza la simulación haciendo uso el software Siemens NX en su apartado Mechatronics Concept Design para dos procesos:</p>
+      <br/>
+    </div>
+    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
       <div class="container">
 
         <div class="row">
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <p>Animi est delectus alias quam repellendus nihil nobis dolor. Est sapiente occaecati et dolore. Omnis aut ut nesciunt explicabo qui. Eius nam deleniti ut omnis repudiandae perferendis qui. Neque non quidem sit sed pariatur quia modi ea occaecati. Incidunt ea non est corporis in.</p>
-              </div>
-            </div>
+          <div class="col-lg-6 video-box">
+            <img src="assets/img/Nx/corteBambu.png" class="img-fluid" alt="">
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-                <p>Aspernatur iste esse aliquam enim et corporis. Molestiae voluptatem aut eligendi quis aut. Libero vel amet voluptatem eos rerum non doloremque. Dolores eum non.</p>
-              </div>
-            </div>
-          </div>
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <p>Ut enim possimus nihil cupiditate beatae. Veniam facere quae non qui necessitatibus rerum eos vero. Maxime sit sunt quo dolor autem est qui quaerat aliquid. Tenetur possimus qui enim.</p>
-              </div>
-            </div>
-          </div>
+            <div class="icon-box">
+              <h4>Máquina para corte de bambú.</h4>
+              <p>La máquina para corte de tubos de bambú está conformada por tres mecanismos:</p>
+              <ul>
+                <li>Bandas transportadoras de entrada y salida.</li>
+                <li>Sistema de sujeción.</li>
+                <li>Sierra.</li>
+              </ul>
+              <p>La banda transportadora de entrada cuenta con un sistema de alineación para lograr introducir el tubo en el sistema de sujeción, y al final de la misma se encuentra un sensor de proximidad. El sistema de sujeción cuenta con un par de soportes sobre los cuales se ubica el tubo, unas cadenas y un cilindro encargado de apretar el tubo cuando se contrae. La sierra está conformada por un disco de sierra y su respecto motor, y un cilindro encargado de empujar la sierra para realizar el corte del tubo. Finalmente la pieza cortada cae a la banda transportadora de la salida para pasar a la siguiente estación.</p>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <p>Sint qui cupiditate. Asperiores fugit impedit aspernatur et mollitia. Molestiae qui placeat labore assumenda id qui nesciunt quo reprehenderit. Rem dolores similique quis soluta culpa enim quia ratione ea.</p>
-              </div>
             </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Niall Katz</h4>
-                <span>Marketing</span>
-                <p>Aut ex esse explicabo quia harum ea accusamus excepturi. Temporibus at quia quisquam veritatis impedit. Porro laborum voluptatum sed necessitatibus a saepe. Deserunt laborum quasi consequatur voluptatum iusto sint qui fuga vel. Enim eveniet sed quibusdam rerum in. Non dicta architecto consequatur quo praesentium nesciunt.</p>
-              </div>
-            </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Demi Lewis</h4>
-                <span>Financing</span>
-                <p>Amet labore numquam corrupti est. Nostrum amet voluptas consectetur dolor voluptatem architecto distinctio consequuntur eligendi. Quam impedit enim aut nesciunt aut dicta quam exercitationem. Reprehenderit exercitationem magnam. Ullam similique ut voluptas totam nobis porro accusamus nulla omnis.</p>
-              </div>
-            </div>
-          </div>
-
         </div>
 
       </div>
     </section>
+    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-6 video-box">
+            <img src="assets/img/Nx/corteAluminio.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <h4>Máquina para corte tipo boca de pescado y tipo transversal en tubos de aluminio.</h4>
+              <p>El diseño de la estación de corte tipo boca de pescado para los tubos de aluminio es muy similar al de corte de bambú salvo que cuenta con un mecanismo adicional, el cual se encarga de ubicar la herramienta de corte (el copa sierra) en la posición deseada y de ejecutar la operación de corte circular. Este mecanismo está conformado por un cilindro para desplazar la herramienta de corte, un motor para generar el movimiento rotacional de la misma y un servomotor para controlar la posición de la base.</p>
+            </div>
+            
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <div class="row">
+      <div class="card">
+        <div class="card-body" style="text-align:center;">
+          <h5 class="card-title">Video Simulación</a></h5>
+          <iframe src="https://drive.google.com/file/d/1RYcU3tg6I3uUVzo44fLNKO2VqGYQehcq/preview" width="640" height="480" allow="autoplay"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   </main><!-- End #main -->
 
