--- a/economica.html
+++ b/economica.html
@@ -88,10 +88,9 @@
     <div class="container" data-aos="fade-up">
       <div class="section-title">
         <h2>Evaluación económica del Proyecto.</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>A continuación se presenta una hoja de excel con la evaluación económica del proyecto. </p>
       <br/>
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR4E8H0eGV3sanX0M83GQHIv_H7dx-wBn1imCvDyjRCE7DRtYU92X6fvA1B08uG6g/pubhtml?widget=true&amp;headers=false"width="100%" height="600" scrolling="no" frameborder="0"></iframe>
-    </div>
+      <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRUf6UcFJ2bau0-Fa0Wva8eqBBKdklfH2G63N8CaNvb9ejJhnZuMCZoIKK4YhgAuA/pubhtml?widget=true&amp;headers=false"></iframe>    </div>
   </div>
 
 
