--- a/planta.html
+++ b/planta.html
@@ -142,13 +142,13 @@
                 <li>Telescopio.</li>
                 <li>Manga asiento.</li>
                 <li>Pedalier.</li>
-                <li>Tijera.</li>
-                <li>Punteras delanteras y traseras.</li>
+                <li>Punteras traseras.</li>
               </ul>
               <h4 class="title">Piezas adquiridas.</h4>
               <ul class="c3">
                 <li>Cadena.</li>
                 <li>Estrella.</li>
+                <li>Tijera.</li>
                 <li>Pedal.</li>
                 <li>Biela.</li>
                 <li>Cambios.</li>
@@ -323,11 +323,27 @@
           </div>
         </div>
         <hr>
+      </div>
+    </section>
+ 
+    <div  data-aos="fade-up" data-aos-delay="200">
+        <h1>Planta automatizada</h1>
+        <p>A raíz del estudio previo se procede a hacer las modificaciones correspondientes en las plantas de fabricación de bicicletas urbanas híbridas y de contrapedal respectivamente.</p>
+        <p>Para el caso de la planta automatizada para bicicleta urbana híbrida se reemplazaron las numerosas estaciones de corte y boca de pescado en una sola. Los dos bloques encerrados en el recuadro representan la maquina automatizada de corte y boca de pescado diseñada.</p>
+        <div align="center"><img src="assets/img/PlantSimu/auto1.png"></div>
+        <p>Esta máquina cuenta con un tiempo de proceso de 15 segundos, y al estar en el mismo montaje va a tener un solo tiempo de setup para ambos subprocesos.</p>
+        <p>La celda robotizada es representada con un único bloque como se muestra en la siguiente imagen. Este bloque recibe como entrada los diferentes segmentos de tubo de aluminio con los que se armarán los lugs. Durante el proceso de soldado el cual dura solamente 54 segundos el operario puede hacer el montaje del siguiente juego de tubos, por lo cual se elimina el tiempo de setup ya que ocurre durante el tiempo de proceso. Sin embargo, se cuenta con un tiempo de 20 segundos en el que el operario deberá hacer el desmontaje de los lugs ya soldados y ubicarlos en la banda transportadora que los llevará al respectivo almacén. </p>
+        <div align="center"><img src="assets/img/PlantSimu/auto2.png"></div>
+        <p>Finalmente, la estación de corte de bambú se reemplaza por una estación automatizada en la que se reduce el tiempo de proceso y tiempo de setup, mejorando el flujo de material a lo largo del proceso de fabricación.</p>
+        <div align="center"><img src="assets/img/PlantSimu/auto3.png"></div>
+        <p>En la siguiente tabla se muestra una comparación con los anteriores indicadores de producción en la que se evidencia una reducción en el tiempo de fabricación de las bicicletas tanto para la producción de bicicletas híbridas como para las de contrapedal, haciendo que se incremente la capacidad de producción en un 66%. Donde antes se producían 101 bicicletas híbridas y 130 bicicletas de contrapedal, ahora gracias a la implementación de la automatización de los procesos de manufactura mencionados anteriormente, se aumenta la capacidad de producción a 168 y 216 bicicletas respectivamente. </p>
+        <div align="center"><img src="assets/img/PlantSimu/auto4.png"></div>
+        <hr>
         <h2>MES</h2>
         <p>Se eligió Odoo como herramienta computacional para la implementación del sistema MES principalmente por su flexibilidad. En lugar de adquirir un paquete completo, Odoo nos permite elegir los módulos que vamos a implementar para mejorar nuestro sistema de gestión y por aparte cobra licencias por su uso, de acuerdo al número de trabajadores e independientemente de su rango en la empresa. Esta modalidad de servicio trae como beneficios una reducción de costos y evitar la adquisición de herramientas que no se utilizarán.</p>
         <img src="assets/img/PlantSimu/herramienta.jpeg" class="img-fluid" alt="">
-        </section>
       </div>
+  
 
   </main><!-- End #main -->
 
