--- a/planta.html
+++ b/planta.html
@@ -235,7 +235,7 @@
         <img src="assets/img/PlantSimu/Tabla.PNG" class="img-fluid" alt="">
         <p>En este caso particular podemos ver como la implementación de Lugs mejora en 3,5 veces
         la producción de bicicletas, pero a la vez la disminución de las estaciones de trabajo
-        limita el correcto desempeño de la planta con el método más optimo de fabricación del marco.</p>
+        limita el correcto desempeño de la planta con el método más óptimo de fabricación del marco.</p>
 
 
         <hr>
